// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should handle sizes correctly 1`] = `
<div>
  <div
    class="undefined grid"
  >
    <button
      aria-expanded="false"
      class="xs-12  undefined"
    >
      <span
        class="xs__mr+1"
      >
        Knopje
      </span>
      <span>
        <test-file-stub />
      </span>
      <span>
        <test-file-stub />
      </span>
    </button>
    <nav>
      <ul>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span>
                <test-file-stub />
              </span>
              <span>
                Spotify
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span>
                <test-file-stub />
              </span>
              <span>
                Apple Podcasts
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span>
                <test-file-stub />
              </span>
              <span>
                Google Podcasts
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Dropdown should handle sizes correctly 2`] = `
<div>
  <div
    class="undefined grid"
  >
    <button
      aria-expanded="false"
      class="xs-12 undefined undefined"
    >
      <span
        class="xs__mr+1"
      >
        Knopje
      </span>
      <span>
        <test-file-stub />
      </span>
      <span>
        <test-file-stub />
      </span>
    </button>
    <nav>
      <ul>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span>
                <test-file-stub />
              </span>
              <span>
                Spotify
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span>
                <test-file-stub />
              </span>
              <span>
                Apple Podcasts
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            href="https://fd.nl"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              <span>
                <test-file-stub />
              </span>
              <span>
                Google Podcasts
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
